--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,14 @@
 {
-    "version": 2,
-    "devCommand": "node index.js",
-    "builds": [{
-        "src": "index.js",
-        "use": "@vercel/node"
-    }],
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "index.js"
-    }]
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "Content-Security-Policy",
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; frame-src *"
+          }
+        ]
+      }
+    ]
   }
+  
